# quick-start-guide-to-llms

./: .gitignore  MEMO.md  README.md  pyproject.toml
notebooks/: 2_semantic_search.ipynb  3_prompt_engineering.ipynb  5_VQA.ipynb  5_adv_prompt_engineering.ipynb  6_recommendation_engine.ipynb  7_constructing_a_vqa_system.ipynb
semantic-search-fastapi/: .env  api.py  requirements.txt
