[tool.poetry]
name = "quick-start-guide-to-llms"
version = "0.1.0"
description = ""
authors = ["10138103 <jk.choi@kt.com>"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "1.14.0"
pandas = "^2.2.2"
jupyter = "^1.0.0"
openai = "^1.34.0"
datasets = "^2.20.0"
transformers = "^4.41.2"
torch = "2.2.2"
anthropic = "^0.28.1"
python-dotenv = "^1.0.1"
pinecone-client = "^4.1.1"
tiktoken = "^0.7.0"
PyPDF2 = "^3.0.1"
scikit-learn = "^1.5.0"
sentence-transformers = "^3.0.1"
numpy = "^1.26.4"
evaluate = "^0.4.2"
cohere = "^5.5.8"
sentencepiece = "^0.2.0"
matplotlib = "^3.9.0"
dask = "^2024.6.0"
dask-ml = "^2024.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
